<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/adapter_shown_breed_img"
        android:layout_width="126dp"
        android:layout_height="123dp"
        android:contentDescription="@string/adapter_breeds_image_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/classifier_default_dog" />

    <TextView
        android:id="@+id/adapter_breed_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/adapter_breeds_title_txt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/adapter_shown_breed_img"
        app:layout_constraintTop_toTopOf="@+id/adapter_shown_breed_img" />

    <TextView
        android:id="@+id/adapter_breeder_confidence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/adapter_breeds_confidence_txt"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/adapter_breed_name"
        app:layout_constraintTop_toBottomOf="@+id/adapter_breed_name" />
</androidx.constraintlayout.widget.ConstraintLayout>