<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PreClassifierActivity">

    <TextView
        android:id="@+id/title_pre_classifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_classifier_title_txt"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/chosen_img_pre_classifier"
        app:layout_constraintEnd_toStartOf="@+id/right_lim_pre_classifier"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/left_lim_pre_classifier"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="spread" />

    <ImageView
        android:id="@+id/chosen_img_pre_classifier"
        android:layout_width="369dp"
        android:layout_height="385dp"
        android:contentDescription="@string/dog_img_desc"
        app:layout_constraintBottom_toTopOf="@id/gallery_btn_pre_classifier"
        app:layout_constraintEnd_toStartOf="@+id/right_lim_pre_classifier"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/left_lim_pre_classifier"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pre_classifier_default_dog_img" />

    <Button
        android:id="@+id/confirm_img_btn_pre_classifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pre_classifier_confirm_img_btn_txt"
        app:layout_constraintEnd_toStartOf="@+id/right_lim_pre_classifier"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/left_lim_pre_classifier"
        app:layout_constraintTop_toBottomOf="@+id/chosen_img_pre_classifier" />

    <Button
        android:id="@+id/gallery_btn_pre_classifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_classifier_gallery_btn_txt"
        app:flow_horizontalBias="0.1"
        app:layout_constraintBottom_toTopOf="@+id/bottom_lim_pre_classifier"
        app:layout_constraintEnd_toStartOf="@id/camera_btn_pre_classifier"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/left_lim_pre_classifier"
        app:layout_constraintTop_toBottomOf="@+id/confirm_img_btn_pre_classifier" />

    <Button
        android:id="@+id/camera_btn_pre_classifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_classifier_camera_btn_txt"
        app:flow_horizontalBias="0.1"
        app:layout_constraintBottom_toBottomOf="@+id/gallery_btn_pre_classifier"
        app:layout_constraintEnd_toStartOf="@+id/right_lim_pre_classifier"
        app:layout_constraintStart_toEndOf="@id/gallery_btn_pre_classifier"
        app:layout_constraintTop_toTopOf="@+id/gallery_btn_pre_classifier" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_lim_pre_classifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <include
        android:id="@+id/activities_menu"
        layout="@layout/menu_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bottom_lim_pre_classifier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_lim_pre_classifier"
        app:layout_constraintStart_toStartOf="@id/left_lim_pre_classifier" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_lim_pre_classifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_lim_pre_classifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>