<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/shown_breed_img"
        android:layout_width="126dp"
        android:layout_height="123dp"
        android:contentDescription="@string/adapter_breeds_image_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/classifier_default_dog" />

    <TextView
        android:id="@+id/breed_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/adapter_breeds_title_txt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/shown_breed_img"
        app:layout_constraintTop_toTopOf="@+id/shown_breed_img" />

    <TextView
        android:id="@+id/breed_confidence_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/adapter_breeds_confidence_txt"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/breed_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/breed_name_tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/breed_expandable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shown_breed_img">

        <TextView
            android:id="@+id/breed_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/breed_expandable_layout"
            app:layout_constraintTop_toTopOf="@id/breed_expandable_layout" />

        <TextView
            android:id="@+id/breed_info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:drawableEndCompat="@drawable/classifier_default_dog"
            app:layout_constraintEnd_toEndOf="@id/breed_expandable_layout"
            app:layout_constraintStart_toStartOf="@id/breed_expandable_layout"
            app:layout_constraintTop_toBottomOf="@id/breed_info_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>